k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transportation
  labels:
    name: transportation
    app.kubernetes.io/name: transportation-portal
