k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transport-api
  namespace: transportation
  labels:
    app: transport-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transport-api
  template:
    metadata:
      labels:
        app: transport-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: thor
      containers:
        - name: api
          image: localhost/transport-api:v1.0.4
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: '256Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
