k8s/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transportation
  namespace: transportation
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: transportation.minilab
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: transport-api
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transport-frontend
            port:
              number: 80
